# PlanetLanding

./: .gitignore  BloomRenderer.cpp  BloomRenderer.h  CMakeLists.txt  CMakeSettings.json  LaserRenderer.cpp  LaserRenderer.h  Renderer.cpp  Renderer.h  SimplexNoise.cpp  SimplexNoise.h  main.cpp
Models/: testShip.mtl
nclgl/: CMakeLists.txt  Camera.cpp  Camera.h  Component.cpp  Component.h  CubeRobot.cpp  CubeRobot.h  Cubemap.cpp  Cubemap.h  GameTimer.h  HeightMap.cpp  HeightMap.h  Light.cpp  Light.h  Matrix4.cpp  Matrix4.h  Mesh.cpp  Mesh.h  OGLRenderer.cpp  OGLRenderer.h  PostPass.cpp  PostPass.h  Quaternion.h  SceneNode.cpp  SceneNode.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vector2.h  Window.h
nclgl/KHR/: wglext.h
nclgl/glad/: CMakeLists.txt
shaders/: AntiAliasing.glsl  BaseFragment.glsl  BaseVertex.glsl  BloomPostfilter.glsl  BloomPrefilter.glsl  CubemapFrag.glsl  CubemapVert.glsl  Downsample.glsl  HdrFrag.glsl  LaserFrag.glsl  PlanetFrag.glsl  PlanetVert.glsl  PostPassFrag.glsl  PostPassVert.glsl  QuadVert.glsl  SunFrag.glsl  Upsample.glsl  atmosphere.glsl  atmosphereVert.glsl  reflectiveFragment.glsl  reflectiveVertex.glsl
